--- a/styles.css
+++ b/styles.css
@@ -20,3 +20,26 @@
     box-shadow: 48px 0 #fff inset;
   }
 }
+
+.step-item {
+  @apply relative flex flex-col justify-center items-center w-full;
+}
+.step-item:not(:first-child):before {
+  @apply content-[''] bg-slate-200 absolute w-full h-[3px] right-2/4 top-1/3 -translate-y-2/4;
+}
+.step {
+  @apply w-8 h-8 flex items-center justify-center z-10 relative bg-gray-300 rounded-full font-semibold text-white;
+}
+.active .step {
+  @apply bg-primary-light;
+}
+.complete .step {
+  @apply bg-primary;
+}
+.complete p {
+  @apply text-gray-400;
+}
+.complete:not(:first-child):before,
+.active:not(:first-child):before {
+  @apply bg-primary;
+}
