--- a/styles.css
+++ b/styles.css
@@ -4,23 +4,28 @@
 }
 
 .loader {
-  width: 48px;
-  height: 48px;
+  background-color: #fff;
+  padding: 20px;
+  border: 10px solid #f3f3f3;
+  border-top: 10px solid #111;
   border-radius: 50%;
-  display: inline-block;
-  box-sizing: border-box;
-  animation: animloader 1s linear infinite;
+
+  animation: spin 2s linear infinite;
+  transition: transform 0.8s ease-in-out;
+  z-index: 9999;
 }
 
-@keyframes animloader {
+@keyframes spin {
   0% {
-    box-shadow: -72px 0 #fff inset;
+    transform: rotate(0deg) scale(1);
+  }
+  50% {
+    transform: rotate(180deg) scale(1.2);
   }
   100% {
-    box-shadow: 48px 0 #fff inset;
+    transform: rotate(360deg) scale(1);
   }
 }
-
 .step-item {
   @apply relative flex flex-col justify-center items-center w-full;
 }
