--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@
 .active:not(:first-child):before {
   @apply bg-primary;
 }
-@layer base {
+/* @layer base {
   :root {
     --sidebar-background: 0 0% 98%;
     --sidebar-foreground: 240 5.3% 26.1%;
@@ -54,4 +54,4 @@
   body {
     @apply bg-background text-foreground;
   }
-}
+} */
